add tests for health and search apis
